[gd_scene load_steps=27 format=3 uid="uid://bay582i6jacqs"]

[ext_resource type="PackedScene" uid="uid://diyms3c76ebbj" path="res://Scenes/player.tscn" id="1_dl375"]
[ext_resource type="Script" path="res://Scenes/CameraController.gd" id="2_yky8w"]
[ext_resource type="Script" path="res://Scenes/CanvasLayer.gd" id="3_xsvof"]
[ext_resource type="FontFile" uid="uid://c43imdrkb6i8i" path="res://Fonts/AfacadFlux/AfacadFlux-Black.ttf" id="4_l174x"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_2fkc6"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_g2hdd"]
sky_material = SubResource("ProceduralSkyMaterial_2fkc6")

[sub_resource type="Environment" id="Environment_crn7d"]
background_mode = 2
sky = SubResource("Sky_g2hdd")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="BoxMesh" id="BoxMesh_bghp3"]
size = Vector3(1, 0.25, 1)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_nhsku"]
data = PackedVector3Array(-0.5, 0.125, 0.5, 0.5, 0.125, 0.5, -0.5, -0.125, 0.5, 0.5, 0.125, 0.5, 0.5, -0.125, 0.5, -0.5, -0.125, 0.5, 0.5, 0.125, -0.5, -0.5, 0.125, -0.5, 0.5, -0.125, -0.5, -0.5, 0.125, -0.5, -0.5, -0.125, -0.5, 0.5, -0.125, -0.5, 0.5, 0.125, 0.5, 0.5, 0.125, -0.5, 0.5, -0.125, 0.5, 0.5, 0.125, -0.5, 0.5, -0.125, -0.5, 0.5, -0.125, 0.5, -0.5, 0.125, -0.5, -0.5, 0.125, 0.5, -0.5, -0.125, -0.5, -0.5, 0.125, 0.5, -0.5, -0.125, 0.5, -0.5, -0.125, -0.5, 0.5, 0.125, 0.5, -0.5, 0.125, 0.5, 0.5, 0.125, -0.5, -0.5, 0.125, 0.5, -0.5, 0.125, -0.5, 0.5, 0.125, -0.5, -0.5, -0.125, 0.5, 0.5, -0.125, 0.5, -0.5, -0.125, -0.5, 0.5, -0.125, 0.5, 0.5, -0.125, -0.5, -0.5, -0.125, -0.5)

[sub_resource type="BoxMesh" id="BoxMesh_l2hny"]
size = Vector3(0.5, 3, 5)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_vbb4t"]
data = PackedVector3Array(-0.25, 1.5, 2.5, 0.25, 1.5, 2.5, -0.25, -1.5, 2.5, 0.25, 1.5, 2.5, 0.25, -1.5, 2.5, -0.25, -1.5, 2.5, 0.25, 1.5, -2.5, -0.25, 1.5, -2.5, 0.25, -1.5, -2.5, -0.25, 1.5, -2.5, -0.25, -1.5, -2.5, 0.25, -1.5, -2.5, 0.25, 1.5, 2.5, 0.25, 1.5, -2.5, 0.25, -1.5, 2.5, 0.25, 1.5, -2.5, 0.25, -1.5, -2.5, 0.25, -1.5, 2.5, -0.25, 1.5, -2.5, -0.25, 1.5, 2.5, -0.25, -1.5, -2.5, -0.25, 1.5, 2.5, -0.25, -1.5, 2.5, -0.25, -1.5, -2.5, 0.25, 1.5, 2.5, -0.25, 1.5, 2.5, 0.25, 1.5, -2.5, -0.25, 1.5, 2.5, -0.25, 1.5, -2.5, 0.25, 1.5, -2.5, -0.25, -1.5, 2.5, 0.25, -1.5, 2.5, -0.25, -1.5, -2.5, 0.25, -1.5, 2.5, 0.25, -1.5, -2.5, -0.25, -1.5, -2.5)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_iagpj"]
data = PackedVector3Array(-0.25, 1.5, 2.5, 0.25, 1.5, 2.5, -0.25, -1.5, 2.5, 0.25, 1.5, 2.5, 0.25, -1.5, 2.5, -0.25, -1.5, 2.5, 0.25, 1.5, -2.5, -0.25, 1.5, -2.5, 0.25, -1.5, -2.5, -0.25, 1.5, -2.5, -0.25, -1.5, -2.5, 0.25, -1.5, -2.5, 0.25, 1.5, 2.5, 0.25, 1.5, -2.5, 0.25, -1.5, 2.5, 0.25, 1.5, -2.5, 0.25, -1.5, -2.5, 0.25, -1.5, 2.5, -0.25, 1.5, -2.5, -0.25, 1.5, 2.5, -0.25, -1.5, -2.5, -0.25, 1.5, 2.5, -0.25, -1.5, 2.5, -0.25, -1.5, -2.5, 0.25, 1.5, 2.5, -0.25, 1.5, 2.5, 0.25, 1.5, -2.5, -0.25, 1.5, 2.5, -0.25, 1.5, -2.5, 0.25, 1.5, -2.5, -0.25, -1.5, 2.5, 0.25, -1.5, 2.5, -0.25, -1.5, -2.5, 0.25, -1.5, 2.5, 0.25, -1.5, -2.5, -0.25, -1.5, -2.5)

[sub_resource type="BoxMesh" id="BoxMesh_ghan7"]
size = Vector3(0.5, 2, 2)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_vjflb"]
data = PackedVector3Array(-0.25, 1, 1, 0.25, 1, 1, -0.25, -1, 1, 0.25, 1, 1, 0.25, -1, 1, -0.25, -1, 1, 0.25, 1, -1, -0.25, 1, -1, 0.25, -1, -1, -0.25, 1, -1, -0.25, -1, -1, 0.25, -1, -1, 0.25, 1, 1, 0.25, 1, -1, 0.25, -1, 1, 0.25, 1, -1, 0.25, -1, -1, 0.25, -1, 1, -0.25, 1, -1, -0.25, 1, 1, -0.25, -1, -1, -0.25, 1, 1, -0.25, -1, 1, -0.25, -1, -1, 0.25, 1, 1, -0.25, 1, 1, 0.25, 1, -1, -0.25, 1, 1, -0.25, 1, -1, 0.25, 1, -1, -0.25, -1, 1, 0.25, -1, 1, -0.25, -1, -1, 0.25, -1, 1, 0.25, -1, -1, -0.25, -1, -1)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_fjpn6"]
data = PackedVector3Array(-0.25, 1, 1, 0.25, 1, 1, -0.25, -1, 1, 0.25, 1, 1, 0.25, -1, 1, -0.25, -1, 1, 0.25, 1, -1, -0.25, 1, -1, 0.25, -1, -1, -0.25, 1, -1, -0.25, -1, -1, 0.25, -1, -1, 0.25, 1, 1, 0.25, 1, -1, 0.25, -1, 1, 0.25, 1, -1, 0.25, -1, -1, 0.25, -1, 1, -0.25, 1, -1, -0.25, 1, 1, -0.25, -1, -1, -0.25, 1, 1, -0.25, -1, 1, -0.25, -1, -1, 0.25, 1, 1, -0.25, 1, 1, 0.25, 1, -1, -0.25, 1, 1, -0.25, 1, -1, 0.25, 1, -1, -0.25, -1, 1, 0.25, -1, 1, -0.25, -1, -1, 0.25, -1, 1, 0.25, -1, -1, -0.25, -1, -1)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_ikvkt"]
data = PackedVector3Array(-0.25, 1, 1, 0.25, 1, 1, -0.25, -1, 1, 0.25, 1, 1, 0.25, -1, 1, -0.25, -1, 1, 0.25, 1, -1, -0.25, 1, -1, 0.25, -1, -1, -0.25, 1, -1, -0.25, -1, -1, 0.25, -1, -1, 0.25, 1, 1, 0.25, 1, -1, 0.25, -1, 1, 0.25, 1, -1, 0.25, -1, -1, 0.25, -1, 1, -0.25, 1, -1, -0.25, 1, 1, -0.25, -1, -1, -0.25, 1, 1, -0.25, -1, 1, -0.25, -1, -1, 0.25, 1, 1, -0.25, 1, 1, 0.25, 1, -1, -0.25, 1, 1, -0.25, 1, -1, 0.25, 1, -1, -0.25, -1, 1, 0.25, -1, 1, -0.25, -1, -1, 0.25, -1, 1, 0.25, -1, -1, -0.25, -1, -1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qkr8d"]
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.196078, 0.196078, 0.196078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xqyfg"]
bg_color = Color(0.861898, 0.418829, 7.70092e-07, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.196078, 0.196078, 0.196078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qbt3u"]
bg_color = Color(0.678431, 0, 0.678431, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.196078, 0.196078, 0.196078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1vfnl"]
bg_color = Color(0, 0.819608, 0.180392, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.196078, 0.196078, 0.196078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tttjm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e3f17"]
border_width_right = 22
border_width_bottom = 10
border_color = Color(0.196078, 0.196078, 0.196078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_568h4"]
border_width_left = 22
border_width_top = 10
border_color = Color(0.196078, 0.196078, 0.196078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3tyu4"]
bg_color = Color(0.196078, 0.196078, 0.196078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_516ck"]
bg_color = Color(0.196078, 0.196078, 0.196078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hsgug"]
bg_color = Color(1, 1, 1, 0.588235)
corner_radius_top_left = 200
corner_radius_top_right = 200
corner_radius_bottom_right = 200
corner_radius_bottom_left = 200

[node name="Node3D" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_crn7d")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(100, 0, 0, 0, 1, 0, 0, 0, 100, 0, -0.125, 0)
layers = 3
mesh = SubResource("BoxMesh_bghp3")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_nhsku")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.00734, 1.5, 0)
layers = 3
mesh = SubResource("BoxMesh_l2hny")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D2"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D2/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_vbb4t")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, -4.37114e-08, -0.707107, 0, 0.707107, -0.707107, 6.18172e-08, -0.707107, -8.00734, 1.5, -9.82174)
layers = 3
mesh = SubResource("BoxMesh_l2hny")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D4"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D4/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_iagpj")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -11.0073, 1, -5)
layers = 3
mesh = SubResource("BoxMesh_ghan7")
skeleton = NodePath("../MeshInstance3D2")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D3"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D3/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_vjflb")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="MeshInstance3D3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.26961, 0, 0)
layers = 3
mesh = SubResource("BoxMesh_ghan7")
skeleton = NodePath("../../MeshInstance3D2")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D3/MeshInstance3D4"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D3/MeshInstance3D4/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_fjpn6")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="MeshInstance3D3/MeshInstance3D4"]
transform = Transform3D(-4.37114e-08, 1, 4.37114e-08, -1, -4.37114e-08, 4.37114e-08, 4.37114e-08, -4.37114e-08, 1, 1.13365, 0.494525, 0)
layers = 3
mesh = SubResource("BoxMesh_ghan7")
skeleton = NodePath("../../../MeshInstance3D2")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D3/MeshInstance3D4/MeshInstance3D5"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D3/MeshInstance3D4/MeshInstance3D5/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_ikvkt")

[node name="Character" parent="." instance=ExtResource("1_dl375")]

[node name="CameraController" type="Node3D" parent="." groups=["CameraController"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0)
script = ExtResource("2_yky8w")

[node name="SpringArm3D" type="SpringArm3D" parent="CameraController"]
spring_length = 5.0
margin = 0.05

[node name="Camera3D" type="Camera3D" parent="CameraController/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)

[node name="LookAt" type="Node3D" parent="CameraController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("3_xsvof")

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
metadata/_edit_use_anchors_ = true

[node name="HealthHUD" type="Control" parent="CanvasLayer/Control"]
layout_mode = 1
anchor_right = 0.376042
anchor_bottom = 0.0953704
metadata/_edit_use_anchors_ = true

[node name="StaminaBar" type="ProgressBar" parent="CanvasLayer/Control/HealthHUD"]
layout_mode = 0
anchor_left = 0.3
anchor_top = 0.487013
anchor_right = 0.55
anchor_bottom = 0.902597
theme_override_styles/background = SubResource("StyleBoxFlat_qkr8d")
theme_override_styles/fill = SubResource("StyleBoxFlat_xqyfg")
value = 50.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="ManaBar" type="ProgressBar" parent="CanvasLayer/Control/HealthHUD"]
layout_mode = 0
anchor_left = 0.541667
anchor_top = 0.487013
anchor_right = 0.791667
anchor_bottom = 0.902597
theme_override_styles/background = SubResource("StyleBoxFlat_qkr8d")
theme_override_styles/fill = SubResource("StyleBoxFlat_qbt3u")
value = 50.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer/Control/HealthHUD"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_right = 1.0
anchor_bottom = 0.5
theme_override_styles/background = SubResource("StyleBoxFlat_qkr8d")
theme_override_styles/fill = SubResource("StyleBoxFlat_1vfnl")
value = 50.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="HealthText" type="Label" parent="CanvasLayer/Control/HealthHUD/HealthBar"]
layout_mode = 0
offset_left = 193.0
offset_right = 357.0
offset_bottom = 47.0
theme_override_fonts/font = ExtResource("4_l174x")
theme_override_font_sizes/font_size = 30
text = "125/250"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CharacterCard" type="Control" parent="CanvasLayer/Control/HealthHUD"]
layout_mode = 1
anchor_right = 0.309259
anchor_bottom = 1.00649
offset_bottom = 1.52588e-05
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="CanvasLayer/Control/HealthHUD/CharacterCard"]
layout_mode = 0
anchor_left = 0.721051
anchor_top = 0.212214
anchor_right = 0.721051
anchor_bottom = 0.75788
offset_right = 40.0
offset_bottom = -16.5685
rotation = 0.785398
theme_override_styles/panel = SubResource("StyleBoxFlat_tttjm")
metadata/_edit_use_anchors_ = true

[node name="PanelBottom" type="Panel" parent="CanvasLayer/Control/HealthHUD/CharacterCard"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.19228
anchor_top = 0.414441
anchor_right = 1.00066
anchor_bottom = 0.990004
offset_right = 1.52588e-05
theme_override_styles/panel = SubResource("StyleBoxFlat_e3f17")
metadata/_edit_use_anchors_ = true

[node name="PanelTop" type="Panel" parent="CanvasLayer/Control/HealthHUD/CharacterCard"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.808383
anchor_bottom = 0.580645
theme_override_styles/panel = SubResource("StyleBoxFlat_568h4")
metadata/_edit_use_anchors_ = true

[node name="PanelRight" type="Panel" parent="CanvasLayer/Control/HealthHUD/CharacterCard"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.810623
anchor_right = 0.902461
anchor_bottom = 0.607053
offset_right = 38.4939
offset_bottom = -32.9325
grow_horizontal = 2
grow_vertical = 2
rotation = 0.785398
theme_override_styles/panel = SubResource("StyleBoxFlat_3tyu4")
metadata/_edit_use_anchors_ = true

[node name="PanelRight2" type="Panel" parent="CanvasLayer/Control/HealthHUD/CharacterCard/PanelRight"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.152542
anchor_top = 0.333333
anchor_right = 0.0677966
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3tyu4")
metadata/_edit_use_anchors_ = true

[node name="PanelRight3" type="Panel" parent="CanvasLayer/Control/HealthHUD/CharacterCard/PanelRight"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.322034
anchor_top = 0.7
anchor_right = -0.0847458
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3tyu4")
metadata/_edit_use_anchors_ = true

[node name="PanelLeft" type="Panel" parent="CanvasLayer/Control/HealthHUD/CharacterCard"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0985287
anchor_top = 0.376198
anchor_right = 0.193534
anchor_bottom = 0.990072
offset_right = 38.7868
offset_bottom = -33.6396
rotation = 0.785398
theme_override_styles/panel = SubResource("StyleBoxFlat_516ck")
metadata/_edit_use_anchors_ = true

[node name="PanelLeft2" type="Panel" parent="CanvasLayer/Control/HealthHUD/CharacterCard/PanelLeft"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.966667
anchor_right = 1.26667
anchor_bottom = 0.4
theme_override_styles/panel = SubResource("StyleBoxFlat_516ck")
metadata/_edit_use_anchors_ = true

[node name="PanelLeft3" type="Panel" parent="CanvasLayer/Control/HealthHUD/CharacterCard/PanelLeft"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0942809
anchor_top = 0.329983
anchor_right = 1.09428
anchor_bottom = 0.533687
theme_override_styles/panel = SubResource("StyleBoxFlat_516ck")
metadata/_edit_use_anchors_ = true

[node name="CoverLeft" type="Panel" parent="CanvasLayer/Control/HealthHUD/CharacterCard"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.337613
anchor_right = 0.0985287
anchor_bottom = 0.578766
theme_override_styles/panel = SubResource("StyleBoxFlat_568h4")
metadata/_edit_use_anchors_ = true

[node name="CoverRight" type="Panel" parent="CanvasLayer/Control/HealthHUD/CharacterCard"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.902433
anchor_top = 0.520889
anchor_right = 0.920348
anchor_bottom = 0.800626
theme_override_styles/panel = SubResource("StyleBoxFlat_568h4")
metadata/_edit_use_anchors_ = true

[node name="HealthBarTriangle" type="Control" parent="CanvasLayer/Control/HealthHUD"]
layout_mode = 1
anchor_left = 0.943213
anchor_top = 0.0970874
anchor_right = 0.979224
anchor_bottom = 0.398058
offset_right = 6.0
offset_bottom = 1.00002
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="PanelRight" type="Panel" parent="CanvasLayer/Control/HealthHUD/HealthBarTriangle"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.28125
anchor_top = 0.289752
anchor_right = 1.29772
anchor_bottom = 0.289752
offset_top = 12.7279
offset_right = -0.526913
offset_bottom = 26.7279
rotation = -0.785398
theme_override_styles/panel = SubResource("StyleBoxFlat_3tyu4")
metadata/_edit_use_anchors_ = true

[node name="PanelRight2" type="Panel" parent="CanvasLayer/Control/HealthHUD/HealthBarTriangle/PanelRight"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0625
anchor_top = 0.928571
anchor_right = 0.59375
anchor_bottom = 1.64286
theme_override_styles/panel = SubResource("StyleBoxFlat_3tyu4")
metadata/_edit_use_anchors_ = true

[node name="PanelRight3" type="Panel" parent="CanvasLayer/Control/HealthHUD/HealthBarTriangle/PanelRight"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.4375
anchor_right = 0.3125
anchor_bottom = 0.928571
theme_override_styles/panel = SubResource("StyleBoxFlat_3tyu4")
metadata/_edit_use_anchors_ = true

[node name="Aim" type="Control" parent="CanvasLayer/Control/HealthHUD"]
anchors_preset = 0
offset_left = 933.0
offset_top = 513.0
offset_right = 987.0
offset_bottom = 567.0

[node name="Panel5" type="Panel" parent="CanvasLayer/Control/HealthHUD/Aim"]
layout_mode = 0
offset_left = 54.0
offset_top = 22.0
offset_right = 64.0
offset_bottom = 42.0
rotation = 1.5708
theme_override_styles/panel = SubResource("StyleBoxFlat_hsgug")

[node name="Panel4" type="Panel" parent="CanvasLayer/Control/HealthHUD/Aim"]
layout_mode = 0
offset_left = 20.0
offset_top = 22.0
offset_right = 30.0
offset_bottom = 42.0
rotation = 1.5708
theme_override_styles/panel = SubResource("StyleBoxFlat_hsgug")

[node name="Panel3" type="Panel" parent="CanvasLayer/Control/HealthHUD/Aim"]
layout_mode = 0
offset_left = 22.0
offset_top = 34.0
offset_right = 32.0
offset_bottom = 54.0
theme_override_styles/panel = SubResource("StyleBoxFlat_hsgug")

[node name="Panel2" type="Panel" parent="CanvasLayer/Control/HealthHUD/Aim"]
layout_mode = 0
offset_left = 22.0
offset_right = 32.0
offset_bottom = 20.0
theme_override_styles/panel = SubResource("StyleBoxFlat_hsgug")

[node name="Panel" type="Panel" parent="CanvasLayer/Control/HealthHUD/Aim"]
layout_mode = 0
offset_left = 22.0
offset_top = 22.0
offset_right = 32.0
offset_bottom = 32.0
theme_override_styles/panel = SubResource("StyleBoxFlat_hsgug")

[node name="MenuHud" type="Control" parent="CanvasLayer/Control"]
anchors_preset = 0
offset_left = 1355.0
offset_right = 1920.0
offset_bottom = 103.0
